# OpenGL-Examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Examples/: CMakeLists.txt
Examples/glsl/: movingshape.frag  movingshape.vert  multicoloredtriangle.frag  multicoloredtriangle.vert  textures.frag  textures.vert
Examples/src/: Animation.cpp  BlueWindow.cpp  BlueWindowTriangle.cpp  GlslCompiler.cpp  GlslCompiler.h  MovingTriangle.cpp  MultiColoredTriangle.cpp  RedTriangle.cpp  Textures.cpp
